<resources>
    <string name="app_name">Abe\'s Community Car Dealership</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cont">Continue</string>
    <string name="listings">Listings</string>
    <string name="favorites">Favorites</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="listingImage">Image of car for sale</string>
    <string name="price">$10,000</string>
    <string name="screenName">Screen Name</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="takeNew">Take New</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="newListing">Create New Listing</string>
    <string name="listingTitle">Listing\'s Title</string>
    <string name="description">Description</string>
    <string name="createListing">Create Listing</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="addPhoto">Add Photo</string>
    <string name="one">1</string>
    <string name="extraInformation">Extra Information</string>
    <string name="address">Address</string>
    <string name="priceInput">Price</string>
    <string name="contact">Contact Information</string>
    <string name="sellerName">Seller\'s Name:</string>
    <string name="sellerInfo">Seller\'s Info:</string>
    <string name="tvPrice">Price:</string>
    <string name="tvContact">Contact:</string>
    <string name="tvLocation">Location:\u0020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="takePhoto">Take Photo</string>
    <string name="maxDistance">Max Distance (miles)</string>
    <string name="sort">Sort</string>
    <string name="noResults">No Results Found.</string>
</resources>